SpringMVC集成JavaMelody SpringMVC对WebMvcConfigurer和WebMVCConfiguration进行配置

--- a/springwebmvc/pom.xml
+++ b/springwebmvc/pom.xml
@@ -33,6 +33,12 @@
             <artifactId>jstl</artifactId>
             <version>${jstl.version}</version>
         </dependency>
+        <dependency>
+            <groupId>net.bull.javamelody</groupId>
+            <artifactId>javamelody-core</artifactId>
+            <version>1.65.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
