--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <java.version>1.8</java.version>
     </properties>
 
-    <!--<dependencies>-->
+    <dependencies>
         <!--<dependency>-->
             <!--<groupId>org.springframework.boot</groupId>-->
             <!--<artifactId>spring-boot-starter</artifactId>-->
@@ -40,7 +40,12 @@
             <!--<artifactId>spring-boot-starter-test</artifactId>-->
             <!--<scope>test</scope>-->
         <!--</dependency>-->
-    <!--</dependencies>-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+    </dependencies>
 
     <!--<build>-->
         <!--<plugins>-->
