SpringWebMvc自动装配(部分)

--- a/springwebmvc/pom.xml
+++ b/springwebmvc/pom.xml
@@ -38,7 +38,11 @@
             <artifactId>javamelody-core</artifactId>
             <version>1.65.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
