自定义SpringBootWebMvc,不集成EnableWebMvc,使用外部化配置定义视图路径

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>autoconfigure</module>
         <module>springapplication</module>
         <module>springwebmvc</module>
+        <module>springboot-webmvc</module>
     </modules>
     <packaging>pom</packaging>
 
