--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>springboot-webmvc</module>
         <module>springboot-view</module>
         <module>sprinbgboot-rest</module>
+        <module>springbootrest</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -43,11 +44,11 @@
             <!--<artifactId>spring-boot-starter-test</artifactId>-->
             <!--<scope>test</scope>-->
         <!--</dependency>-->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.projectlombok</groupId>-->
+            <!--<artifactId>lombok</artifactId>-->
+            <!--<optional>true</optional>-->
+        <!--</dependency>-->
     </dependencies>
 
     <!--<build>-->
