reactive准备:同步/异步,阻塞/非阻塞探索

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>springbootrest</module>
         <module>spring-servlet</module>
         <module>spring-boot-servlet</module>
+        <module>spring-reactive</module>
     </modules>
     <packaging>pom</packaging>
 
