--- a/springapplication/pom.xml
+++ b/springapplication/pom.xml
@@ -135,6 +135,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>SpringApplicationBootstrap</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
