Reactive实验(好难啊!)

--- a/spring-reactive/pom.xml
+++ b/spring-reactive/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>spring-reactive</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
