SpringBoot外部化装配原理分析与实验(至此整个SpringBoot课程学习完毕)

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <module>spring-servlet</module>
         <module>spring-boot-servlet</module>
         <module>spring-reactive</module>
+        <module>springboot-webflux</module>
+        <module>externalized-configuration</module>
     </modules>
     <packaging>pom</packaging>
 
